--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,12 @@ form {
   margin: 3rem auto;
 }
 
-form > input[type="text"] {
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+form > input[type="number"] {
   width: 60px;
   height: 80px;
   text-align: center;
